vlib/v/checker/tests/mod_op_wrong_right_type_err_d.out
vlib/v/checker/tests/mod_op_wrong_right_type_err_d.v:3:14: error: mismatched types `any_int` and `map_string_int`
    1 | fn main() {
    2 |     a := map[string]int
    3 |     println(1 % a)
      |                 ^
    4 | }
